fixed image overflow

--- a/WebApplication1/Content/bootstrap.css
+++ b/WebApplication1/Content/bootstrap.css
@@ -601,7 +601,11 @@ progress {
   max-width: 100%;
   height: auto;
 }
-
+.fixed-size-img {
+    width: 300px;  
+    height: 200px;  
+    object-fit: cover;  
+}
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
